[tool.poetry]
name = "brasil-agent"
version = "0.1.0"
description = ""
authors = ["Antonio Henrique Machado <antoniohenriquemachado08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
llama-index = "^0.10.58"
pypdf = "^4.3.1"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
llama-index-experimental = "^0.1.3"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
